--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,63 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input {
+  @apply w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-purple-500;
+}
+
+/* styles.css */
+/* input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 93%;
+  margin-bottom: 10px;
+  font-size: 16px;
+  
+
+}
+
+input:focus {
+  border-color: #007bff;
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+button {
+  display:flex;
+ 
+  justify-content: center;
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #02101f;
+  color:white;
+}
+
+label {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  display: block;
+}
+
+form {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #eee;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  
+}
+
+h2 {
+  text-align: center;
+} */
