login complete functionality

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 input {
-  @apply w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-purple-500;
+  @apply w-full bg-slate-50 px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-purple-500;
 }
 
 /* styles.css */
